cabal-version:      >= 1.6
build-type:         Simple
Name:               pixelparty
version:            0.2.1
description:        simple tool to experiment with glsl fragment shaders
license:            BSD3
license-file:       LICENSE
category:           Graphics
author:             Andreas-Christoph Bernstein
maintainer:         andreas.bernstein@googlemail.com
copyright:          Andreas-Christoph Bernstein 2010-2011
homepage:           http://github.com/bernstein/pixelparty/
stability:          Beta
extra-source-files: README

source-repository head
  type: git
  location: git://github.com/bernstein/pixelparty.git

library
    exposed-modules:    PixelParty.Texture2D
                        PixelParty.Main
                        PixelParty.CmdLine
                        PixelParty.Types
                        PixelParty.ShaderIncludes
                        PixelParty.Shader
    hs-source-dirs:      src

executable pixelparty
    main-is:            Main.hs
    other-modules:
                        PixelParty.Texture2D
                        PixelParty.Main
                        PixelParty.CmdLine
                        PixelParty.Types
                        PixelParty.ShaderIncludes
                        PixelParty.Shader
    hs-source-dirs:      src
    ghc-options:         -O

    Build-Depends:       
                  base, array, haskell98, 
                  directory, time,
                  stb-image, bitmap, Imlib,
                  containers, array,
                  OpenGLRaw, SDL, mtl,
                  cmdargs
