cabal-version:      >=1.10
build-type:         Simple
Name:               pixelparty
version:            0.2.1
description:        simple tool to experiment with glsl fragment shaders
license:            BSD3
license-file:       LICENSE
category:           Graphics
author:             Andreas-Christoph Bernstein
maintainer:         andreas.bernstein@googlemail.com
copyright:          Andreas-Christoph Bernstein 2010-2011
homepage:           http://github.com/bernstein/pixelparty/
stability:          Beta
extra-source-files: README

source-repository head
  type: git
  location: git://github.com/bernstein/pixelparty.git

library
    hs-source-dirs:      src
    exposed-modules:
      PixelParty.Texture2D
      PixelParty.Main
      PixelParty.CmdLine
      PixelParty.Types
      PixelParty.ShaderIncludes
      PixelParty.Shader
      PixelParty.Window

    build-depends:
                  base >= 4.7 && < 5,
                  array,
                  directory,
                  time,
                  containers,
                  array,
                  gl,
                  sdl2 >= 1.3,
                  mtl,
                  cmdargs
  default-language:    Haskell2010

executable pixelparty
    hs-source-dirs:      app
    main-is:            pixelparty.hs
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:
                  base >= 4.7 && < 5,
                  pixelparty,
                  array,
                  directory,
                  time,
                  containers,
                  array,
                  gl,
                  sdl2 >= 1.3,
                  mtl,
                  cmdargs
  default-language:    Haskell2010
